# local-roam

./: .gitignore  CONTEXT.md  README.md  TASKS.md  package-lock.json  package.json
docs/: PRD.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: bibtex.rs  clip.rs  commands.rs  daily.rs  folgezettel.rs  index.rs  lib.rs  linker.rs  main.rs  recall.rs  settings.rs  sources.rs  state.rs  templates.rs  vault.rs
src/lib/: Editor.svelte  Graph.svelte  LinkCarousel.svelte  api.ts
src/routes/: +page.svelte
src/routes/capture/clip/: +page.svelte
src/routes/capture/daily/: +page.svelte
src/routes/capture/import/: +page.svelte
src/routes/capture/template/: +page.svelte
src/routes/graph/: +page.svelte
