[package]
name = "local-roam"
version = "0.1.0"
description = "A forced-memory research notebook"
authors = ["Thomas Huang"]
edition = "2021"

[lib]
name = "local_roam_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["clock"] }
walkdir = "2"
anyhow = "1"
# Blocking HTTP for capture imports (#18d arXiv fetch, #18e web clip). Blocking fits the
# synchronous Tauri command layer; rustls (default `tls` feature) keeps it OpenSSL-free.
ureq = { version = "2", default-features = false, features = ["tls", "gzip"] }

[dev-dependencies]
tempfile = "3"
